Implemented integration tests to update a room.
