# service/src/main/java/br/com/sw2you/realmeet/controller/RoomController.java
@@ -6,6 +6,7 @@ import static java.util.concurrent.CompletableFuture.supplyAsync;
 import br.com.sw2you.realmeet.api.facade.RoomsApi;
 import br.com.sw2you.realmeet.api.model.CreateRoomDTO;
 import br.com.sw2you.realmeet.api.model.RoomDTO;
+import br.com.sw2you.realmeet.api.model.UpdateRoomDTO;
 import br.com.sw2you.realmeet.service.RoomService;
 import br.com.sw2you.realmeet.util.ResponseEntityUtils;
 import java.util.concurrent.CompletableFuture;
@@ -25,12 +26,20 @@ public class RoomController implements RoomsApi {
 
     @Override
     public CompletableFuture<ResponseEntity<RoomDTO>> getRoom(Long id) {
-        return supplyAsync(() -> roomService.getRoom(id), controllerExecutor).thenApply(ResponseEntityUtils::ok);
+        return supplyAsync(() -> roomService.getRoom(id), controllerExecutor)
+            .thenApply(ResponseEntityUtils::ok);
+    }
+
+    @Override
+    public CompletableFuture<ResponseEntity<Void>> updateRoom(Long id, UpdateRoomDTO updateRoomDTO) {
+        return runAsync(() -> roomService.updateRoom(id, updateRoomDTO), controllerExecutor)
+            .thenApply(ResponseEntityUtils::noContent);
     }
 
     @Override
     public CompletableFuture<ResponseEntity<Void>> deleteRoom(Long id) {
-        return runAsync(() -> roomService.deleteRoom(id), controllerExecutor).thenApply(ResponseEntityUtils::noContent);
+        return runAsync(() -> roomService.deleteRoom(id), controllerExecutor)
+            .thenApply(ResponseEntityUtils::noContent);
     }
 
     @Override
