# service/src/main/java/br/com/sw2you/realmeet/domain/repository/RoomRepository.java
@@ -17,4 +17,8 @@ public interface RoomRepository extends JpaRepository<Room, Long> {
     @Modifying(clearAutomatically = true, flushAutomatically = true)
     @Query("UPDATE Room r SET r.active = false WHERE r.id = :roomId")
     void deactivate(@Param("roomId") Long roomId);
+
+    @Modifying(clearAutomatically = true, flushAutomatically = true)
+    @Query("UPDATE Room r SET r.name = :name, r.seats = :seats WHERE r.id = :roomId")
+    void updateRoom(@Param("roomId") Long roomId, @Param("roomId") String name, @Param("roomId") Integer seats);
 }
