# service/src/main/resources/api.yml
@@ -20,7 +20,7 @@ paths:
             type: integer
             format: int64
       responses:
-        '200':
+        200:
           description: 'OK'
           content:
             application/json:
@@ -43,10 +43,36 @@ paths:
             type: integer
             format: int64
       responses:
-        '204':
+        204:
           description: 'Deleted successfully'
         404:
           description: Not Found
+    put:
+      summary: 'Updates a specific room by its id'
+      operationId: updateRoom
+      tags:
+        - room
+      parameters:
+        - name: id
+          in: path
+          description: ID of the room
+          required: true
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdateRoomDTO'
+        required: true
+      responses:
+        204:
+          description: 'Updated successfully'
+        404:
+          description: Not Found
+        422:
+          $ref: '#/components/responses/UnprocessableEntity'
 
   /rooms:
     post:
@@ -71,13 +97,18 @@ paths:
           $ref: '#/components/responses/UnprocessableEntity'
 components:
   schemas:
-    CreateRoomDTO:
+    UpdateRoomDTO:
       type: object
       properties:
         name:
           type: string
         seats:
           type: integer
+
+    CreateRoomDTO:
+      type: object
+      allOf:
+        - $ref: '#/components/schemas/UpdateRoomDTO'
 
     RoomDTO:
       type: object
